<resources>
    <string name="app_name">HelldiversBuildHub</string>
    <string name="percText">Liberación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="loadingtext">Cargando...</string>
    <string name="potenciadorEsp">Potenciador</string>
    <string name="pasivaTxt">Pasiva de la Armadura</string>
    <string name="secundariaTxt">Arma Secundaria</string>
    <string name="primariaTxt">Arma Primaria</string>
    <string name="subirTxt">Subir</string>
    <string name="default_web_client_id">181421282560-eabinikk13cq97caf9ekmss62ogehm9n.apps.googleusercontent.com</string>
    <string name="estadotxt">Estado</string>
    <string name="buildstxtbtn">Builds</string>
    <string name="subirtxt">Subir</string>
    <string name="ordenestxtbtn">Órdenes</string>
    <string name="faccionTxt">Facción</string>
    <string name="nobuildsTxt">No hay builds todavía</string>
    <string name="libTxt">Liberación</string>
    <string name="termTxt">Termínidos</string>
    <string name="illTxt">Iluminados</string>
    <string name="botsTxt">Bots</string>
    <string name="hintEtTxt">Nombre de la build</string>
    <string name="tittxt">Título</string>
    <string name="codestratTxt">Código de la estratagema</string>
    <string name="c_digo_de_lanzamiento_txt">Código de lanzamiento</string>
    <string name="no_hay_major_orders_disponibles">No hay Major Orders disponibles</string>
    <string name="elegir_cuenta">Elegir cuenta</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="app_description">Versión 1.00, Helldivers BuildHub.</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="app_version_label">1.00</string>
    <string name="app_author_label">Javi Coronel</string>
    <string name="app_information">Helldivers BuildHub Android</string>
    <string name="loading">Cargando...</string>
    <string name="perfil">Perfil</string>


</resources>