<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/frag1"
        android:icon="@drawable/planet_deseleccionado"
        android:fontFamily="@font/orbitron_regular"
        android:title="@string/estadotxt" />
    <item
        android:id="@+id/frag2"
        android:icon="@drawable/casco_deselect"
        android:fontFamily="@font/orbitron_regular"
        android:title="@string/buildstxtbtn" />
    <item
        android:id="@+id/frag3"
        android:icon="@drawable/share_unselected_helldivers"
        android:fontFamily="@font/orbitron_regular"
        android:title="@string/subirtxt" />

    <item
        android:id="@+id/frag4"
        android:icon="@drawable/major_orders_unselected"
        android:fontFamily="@font/orbitron_regular"
        android:title="@string/ordenestxtbtn" />
</menu>